Se agrega funcionalidad JS para mostrar y agregar productos al alura geek, se arregla botón de eliminar en cards

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pagina que agrega productos a tienda",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "json-server --watch db.json --port 3001"
   },
   "author": "",
   "license": "ISC",
